--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,22 +1,24 @@
 .header img{
-    height: 150px;
+    height: 70px;
     margin-top: 10px;
 }
 
 .header nav{
     background-color: red;
-    line-height: 40px;
+    line-height: 30px;
     font-size: 20px;
     text-align: left;
 }
 
 .header nav a{
     text-decoration: none;
-    color: white;
+    color: green;
     margin-right: 20px;
-    padding: 5px;
+    padding: 0 5px;
+    
 }
 
 nav a:hover{
-    background-color: green;
+    background-color: white;
+    color: red;
 }
